Fixed image alignment in #content

--- a/static/style.css
+++ b/static/style.css
@@ -165,7 +165,7 @@ table {
     width: 920px;
     font-family: "Helvetica Neue",Helvetica,"Segoe UI",Arial,freesans,sans-serif;
     font-size: 1em;
-    text-align: justify;
+    text-align: center;
 }
 
 #footer {
